--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HBNB</title>
-</head>
-<body>
-    <h1>Number: {{nums}}</h1>
-</body>
-</html>
+<HTML lang="en">
+    <HEAD>
+        <TITLE>HBNB</TITLE>
+    </HEAD>
+    <BODY>
+        <H1>Number: {{nums}}</H1>
+    </BODY>
+</HTML>
