--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,39 +4,28 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
+    {% if not stateId %}
         <H1>States</H1>
-{% if not stateId %}
-    <UL>
-        {% for state in states %}
-        <LI>{{ state.id }}: <B>{{ state.name }}</B>
-            <UL>
-                {% for city in cities %}
-                {% if city.state_id == state.id %}
-                    <LI>{{city.id}}: <B>{{ city.name }}</B>
-                    </LI>
-                {% endif %}
-                {% endfor %}
-            </UL>
-        </LI>
-        {% endfor %}        
-    </UL>
-{% endif %}
-{% else %}
-    <UL>
-        {{ state = states.stateId }}
-        <LI>{{ state.id }}: <B>{{ state.name }}</B>
-            <UL>
-            {% for city in cities %}
-                {% if city.state_id == state.id %}
-                    <LI>{{city.id}}: <B>{{ city.name }}</B>
-                    </LI>
-                {% endif %}
+        <UL>
+            {% for state in states.values() | sort(attribute='name') %}
+                <LI>
+                    {{ state.id }}: <B>{{ state.name }}</B>
+                </LI>
             {% endfor %}
-            </UL>
-        </LI>
-        {% endfor %}        
-    </UL>
-{% endelse %}
+        </UL>
+    {% elif stateId in states %}
+        {% set state = states[stateId] %}
+        <H1>State: {{ state.name }}</H1>
+        <H3>Cities</H3>
+        <UL>
+            {% for city in state.cities | sort(attribute='name') %}
+            <LI>
+                {{ city.id }}: <B>{{ city.name }}</B>
+            </LI>
+            {% endfor %}
+        </UL>
+    {% else %}
+        <H1>Not found!</H1>
+    {% endif %}
     </BODY>
-}
 </HTML>
